terraformA.tf
#CreateKeyPair on AWS

#10 steps to create a terraform infra. on Aws

#1- Create vpc
resource "aws_vpc" "myvpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "myvpc"
  }
}

#2- Create Internet Gateway
resource "aws_internet_gateway" "mygw" {
  vpc_id = aws_vpc.myvpc.id
  tags = {
    Name = "mygw"
  }
}

#3- Create Custom Route Table
resource "aws_route_table" "rt" {
  vpc_id = aws_vpc.myvpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.mygw.id
  }
  route {
    ipv6_cidr_block = "::/0"
    gateway_id      = aws_internet_gateway.mygw.id
  }
  tags = {
    Name = "myRoutetable"
  }
}

#4- Create a Subnet
resource "aws_subnet" "subnet-1" {
  vpc_id            = aws_vpc.myvpc.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "us-east-1c"
  tags = {
    Name = "sub1"
  }
}

#5- Associate subnet with Route table
resource "aws_route_table_association" "rta" {
  subnet_id      = aws_subnet.subnet-1.id
  route_table_id = aws_route_table.rt.id
}

#6- Create Security Group to allow port 22,80,443
resource "aws_security_group" "secg" {
  name   = "allow_web_traffic"
  vpc_id = aws_vpc.myvpc.id
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "allow_web"
  }
}

#7- Create A Network Interface with an Ip in the Subnet that was Created in Step 4
resource "aws_network_interface" "web-server-nic" {
  subnet_id       = aws_subnet.subnet-1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.secg.id]
}

#8- Assign an elastic Ip to the network interface created in step 7
resource "aws_eip" "realip" {
  vpc                       = true
  network_interface         = aws_network_interface.web-server-nic.id
  associate_with_private_ip = "10.0.1.50"
  depends_on                = [aws_internet_gateway.mygw] #we have to add depends on cuz terraform can't diff which one should be lunched first and eip depends on internet gateway
}

#9- Create Ubuntu Server and install/enable apache2
resource "aws_instance" "ec2" {
  ami               = "ami-0557a15b87f6559cf"
  instance_type     = "t2.micro"
  availability_zone = "us-east-1c"
  key_name          = "MyKeyPairaya"
  network_interface {
    device_index         = 0
    network_interface_id = aws_network_interface.web-server-nic.id
  }
  user_data = <<-EOF
		#!/bin/bash
		sudo apt update -y
		sudo apt install apache2 -y
		sudo systemctl start apache2
		sudo bash -c "echo your very first web server > /var/www/html/index.html"
		EOF
  tags = {
    Name = "web-server"
  }
}

output "server_public_ip" {
  value = aws_eip.realip.public_ip
}
